RESOLVED FIXED230867
[libpas] Fix coalescing of the large sharing pool and make it easy to introspect it (update to e4d20851ee9ff00f2962b349a9ff8465695a83d7)
https://bugs.webkit.org/show_bug.cgi?id=230867
Summary [libpas] Fix coalescing of the large sharing pool and make it easy to introsp...
Filip Pizlo
Reported 2021-09-27 16:11:13 PDT
...
Attachments
the patch (23.45 KB, patch)
2021-09-27 16:16 PDT, Filip Pizlo
no flags
patchy mcpatcherson (24.20 KB, patch)
2021-09-27 16:20 PDT, Filip Pizlo
no flags
the patch (24.29 KB, patch)
2021-09-27 16:26 PDT, Filip Pizlo
ysuzuki: review+
Filip Pizlo
Comment 1 2021-09-27 16:16:53 PDT
Created attachment 439409 [details] the patch
Filip Pizlo
Comment 2 2021-09-27 16:20:45 PDT
Created attachment 439412 [details] patchy mcpatcherson
Filip Pizlo
Comment 3 2021-09-27 16:26:21 PDT
Created attachment 439413 [details] the patch
Yusuke Suzuki
Comment 4 2021-09-28 09:48:11 PDT
Comment on attachment 439413 [details] the patch r=me
Filip Pizlo
Comment 5 2021-09-28 10:03:16 PDT
Radar WebKit Bug Importer
Comment 6 2021-09-28 10:04:20 PDT
Note You need to log in before you can comment on or make changes to this bug.